<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondoprincipal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_nuevo"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textSize="25sp"
            style="@style/CustomStyleButton"
            android:text="@string/nuevapartida"
            android:layout_weight="0.40"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            >
        </Button>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.60">

                <Button
                    android:id="@+id/btn_puntuacion"
                    style="@style/CustomStyleButton"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/puntuacion"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="0.40">
                </Button>

                <Button
                    android:id="@+id/btn_ajustes"
                    style="@style/CustomStyleButton"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/cofiguracion"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="0.20">
                </Button>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>